--- a/ArduinoSimplePacket/ArduinoSimplePacket.vcxproj.filters
+++ b/ArduinoSimplePacket/ArduinoSimplePacket.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="SimpleSerializer\Serializable.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="BytesBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="PacketOnOff.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="SimpleSerializer\Serializable.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="BytesBuffer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
